--- a/plugins-scripts/Makefile.am
+++ b/plugins-scripts/Makefile.am
@@ -37,6 +37,8 @@ EXTRA_MODULES=\
   Classes/MerlinGerin/Components/EnvironmentalSubsystem.pm \
   Classes/MerlinGerin/Components/BatterySubsystem.pm \
   Classes/MerlinGerin.pm \
+  Classes/Raritan/Components/SensorSubsystem.pm \
+  Classes/Raritan.pm \
   Classes/MibsAndOids.pm \
   Classes/Device.pm
 EXTRA_DIST=check_ups_health.pl $(EXTRA_MODULES)
