new directory layout

--- a/plugins-scripts/Makefile.am
+++ b/plugins-scripts/Makefile.am
@@ -1,19 +1,8 @@
-## Process this file with automake to produce Makefile.in
-
-SED=/bin/sed
-GREP=/bin/grep
-CAT=/bin/cat
-ECHO=/bin/echo
-
-SUFFIXES = .pl .pm .sh
-
-VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t
-
 libexec_SCRIPTS=check_ups_health
-MY_MODULES=
+GL_MODULES=\
+  ../lib/Monitoring/GLPlugin.pm \
+  ../lib/Monitoring/GLPlugin/SNMP.pm
 EXTRA_MODULES=\
-  GLPlugin.pm \
-  GLPluginSNMP.pm \
   Classes/APC/Powermib/Components/EnvironmentalSubsystem.pm \
   Classes/APC/Powermib/Components/BatterySubsystem.pm \
   Classes/APC/Powermib.pm \
@@ -39,7 +28,22 @@ EXTRA_MODULES=\
   Classes/MerlinGerin.pm \
   Classes/MibsAndOids.pm \
   Classes/Device.pm
-EXTRA_DIST=check_ups_health.pl $(EXTRA_MODULES)
+
+SED=/bin/sed
+GREP=/bin/grep
+CAT=/bin/cat
+ECHO=/bin/echo
+if DISABLE_STANDALONE
+STANDALONE = no
+else
+STANDALONE = yes
+endif
+
+SUFFIXES = .pl .pm .sh
+
+VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t
+
+EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)
 
 CLEANFILES=$(libexec_SCRIPTS)
 
@@ -54,18 +58,24 @@ AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@
 	chmod +x $@
 
 .sh :
-	(AWK) -f ./subst $< > $@
+	$(AWK) -f ./subst $< > $@
 	chmod +x $@
 
 $(libexec_SCRIPTS) : $(EXTRA_DIST)
+	if [ -f ../../GLPlugin/lib/Monitoring/GLPlugin.pm ]; then cp -r ../../GLPlugin/lib ..; fi
 	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
-	$(ECHO) "# nagios: +epn" >> $@
+	$(ECHO) "# nagios: -epn" >> $@
 	$(ECHO) >> $@
+	if [ "${STANDALONE}" == "yes" ]; then \
+		$(ECHO) i am standalone; \
+		for m in ${GL_MODULES}; do \
+			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
+		done \
+	fi
 	for m in ${EXTRA_MODULES}; do \
-		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst | $(GREP) -v "use Nagios::Plugin" >> $@; \
+		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
 	done
 	$(ECHO) "package main;" >> $@
-	$(CAT) check_ups_health.pl | $(AWK) -f ./subst >> $@
+	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
 	chmod +x $@
-#| $(GREP) -v "use Nagios" >> $@;
 
