--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,12 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = plugins-scripts doc
+SUBDIRS = plugins-scripts
+DOS2UNIX=$(shell which dos2unix || which fromdos)
 
 dist-hook:
-	make 
+	if [ -f ../GLPlugin/lib/Monitoring/GLPlugin.pm ]; then cp -r ../GLPlugin/lib .; fi
+	rm -f t/var/tmp/*
+	rm -f t/var/adm/*
+	find $(distdir) -type f -exec $(DOS2UNIX) {} >/dev/null 2>&1 \;
+	make
+
